# QtExcelReader

./: Book1.xlsx  CMakeLists.txt  ExcelTable.cpp  ExcelTable.h  MainWindow.cpp  MainWindow.ui  VSLapp.cpp  excelObjectProperties.txt  excelReader.pro
misc/CMake/: FindBRLCAD.cmake  findAndInstallDependencies.cmake  qtPrefix.cmake  setupCpack.cmake
misc/CMake/compiler/: compiler_setup.cmake
